some helpful comment

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -112,7 +112,7 @@ $(document).ready(function(){
       <div class = "col-sm-8">
         <h2>About Fly4Less</h2>
         <h4>FLY4LESS Travel has an extensive network of preferred travel partners to bring you the best selection of destinations, along with outstanding value.We’re constantly adding new offers, package deals, and more, often with added perks, special privileges, and rewards.</h4>
-        <p>FLY4LESS Travel Ltd. is a full service travel agency located in the Toronto GTA. We specialize in vacation packages, flights, last minute specials, cruises, tours, car rentals, hotel reservations and corporate travel services. We have been in business for more than 30 years and our experienced and knowledgeable travel consultants can assist you with any of your travel needs. For any of your vacations, holidays, hotels, all-inclusive packages and corporate business travel needs, we can save you money.At FLY4LESS Travel, we will go the distance while ensuring your business trip or family vacation needs are delivered and are able to offer you anything from a cruise, vacation package or flight to any destination. We raise the bar for all travel agencies because we offer service and value for all your travel requirements.Reasons to book your next vacation with FLY4LESS Travel! We guarantee that you will never pay more using FLY4LESS Travel as your travel agency of choice!</p>
+        <p>FLY4LESS Travel Ltd. is a full service travel agency located in the Toronto GTA. We specialize in vacation packages, flights, last minute specials, cruises, tours, car rentals, hotel reservations and corporate travel services. We have been in business for more than 30 years and our experienced and knowledgeable travel consultants can assist you with any of your travel needs. For any of your vacations, holidays, hotels, all-inclusive packages and corporate business travel needs, we can save you money.At FLY4LESS Travel, we will go the distance while ensuring your business trip or family vacation needs are delivered and are able to offer you anything from a cruise, vacation package or flight to any destination. We raise the bar for all travel agencies because we offer service and value for all your travel requirements.Reasons to book your next vacation with FLY4LESS Travel! We guarantee that you will never pay more using FLY4LESS Travel as your travel agency of choice!. Fly4Less is just amzing</p>
         <button class="btn btn-default btn-lg">Get in Touch</button>
       </div>
       <div class ="col-sm-4">
@@ -178,7 +178,7 @@ $(document).ready(function(){
 
 <div id="portfolio" class="container-fluid text-center bg-grey">
   <h2>Portfolio</h2><br>
-  <h4>What we have created</h4>
+  <h4>We are registered with more than 50 airlines</h4>
   <div class="row text-center">
     <div class="col-sm-4">
       <div class="thumbnail">
